Updated configuration files - Changed the IGC for config.yml be sorted with category pages - Updated a few descriptions and moved some config.yml values to 'deprecated' - Updated the default AllCrates, Beginner, Middle, and Master crates to use %keys% and %crates% in the crate lore instead of via the config.yml - Fixed every save button in the IGC saying 'Save every crate/file' - Added 'crates-claim-deny-deposit-keys' message to Messages.yml

--- a/Messages.yml
+++ b/Messages.yml
@@ -37,3 +37,4 @@ cant-craft-keys: '&4&lERROR: &cYou are not allowed to craft keys.'
 received-key: '&2&lSUCCESS! &aYou just received %amount% %crate%&a key(s)!'
 received-virtual-key: '&2&lSUCCESS! &aYou just received %amount% virtual %crate%&a key(s)!'
 given-fallback-reward: '&6&lINFO: &eYou already have the %reward% &ereward, so you have been given the %fallbackreward% &ereward instead.'
+crates-claim-deny-deposit-keys: '&4&lHey! &cYou can not deposit keys into /crates claim.'
