--- a/pom.xml
+++ b/pom.xml
@@ -119,7 +119,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.6.1</version>
+                <version>3.7.0</version>
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
@@ -128,7 +128,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>2.3</version>
+                <version>3.2.4</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
@@ -143,8 +143,8 @@
                             </artifactSet>
                             <relocations>
                                 <relocation>
-                                    <pattern>org.apache.commons.pool2</pattern>
-                                    <shadedPattern>org.shaded.apache.commons.pool2</shadedPattern>
+                                    <pattern>org.bstats.bukkit</pattern>
+                                    <shadedPattern>me.ztowne13.customcrates.interfaces.externalhooks</shadedPattern>
                                 </relocation>
                             </relocations>
                         </configuration>
