--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>me.ztowne13</groupId>
     <artifactId>specializedcrates</artifactId>
-    <version>2.13 - BETA 2</version>x
+    <version>2.13 - BETA 2</version>
     <packaging>jar</packaging>
     <name>SpecializedCrates</name>
 
