--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,12 @@
             <version>1.7</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.github.cryptomorin</groupId>
+            <artifactId>XSeries</artifactId>
+            <version>7.5.3</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -150,6 +156,10 @@
                                 <relocation>
                                     <pattern>org.bstats.bukkit</pattern>
                                     <shadedPattern>me.ztowne13.customcrates.interfaces.externalhooks</shadedPattern>
+                                </relocation>
+                                <relocation>
+                                    <pattern>com.cryptomorin.xseries</pattern>
+                                    <shadedPattern>me.ztowne13.customcrates.utils.xseries</shadedPattern>
                                 </relocation>
                             </relocations>
                         </configuration>
