now use XMaterial

--- a/pom.xml
+++ b/pom.xml
@@ -140,6 +140,7 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
+                            <minimizeJar>true</minimizeJar>
                             <artifactSet>
                                 <includes>
                                     <include>*</include>
